src/sketches/homer/index.css
@keyframes octocat-wave {
  0%,
  100% {
    transform: rotate(0);
  }

  20%,
  60% {
    transform: rotate(-25deg);
  }

  40%,
  80% {
    transform: rotate(10deg);
  }
}

@media (max-width: 500px) {
  .github-corner .octo-arm {
    animation: octocat-wave 560ms ease-in-out;
  }

  .github-corner:hover .octo-arm {
    animation: none;
  }
}

:root {
  --skin: #ffd937;
  --stubble: #d1b271;
}

html,
body {
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  padding: 0;
  margin: 0;
  font-size: 14px;
}

.octo-arm {
  transform-origin: 130px 106px;
}

.github-corner:hover .octo-arm {
  animation: octocat-wave 560ms ease-in-out;
}

.github-corner svg {
  position: absolute;
  top: 0;
  right: 0;
  border: 0;
  color: #fff;
  fill: #151513;
}

div,
div::after,
div::before {
  display: block;
  box-sizing: border-box;
  border-radius: 50%;
}

.canvas {
  position: relative;
  overflow: hidden;
  width: 32em;
  height: 32em;
}

.canvas::after {
  position: absolute;
  z-index: 1000;
  width: 100%;
  height: 100%;
  box-shadow: inset 0 0 0 0.15em #000, inset 0 0 0 0.3em #fff,
    inset 0 0 0 0.4em #000;
  content: "";
}

.top {
  position: absolute;
  top: 1.9em;
  left: 9.83em;
  overflow: hidden;
  width: 15em;
  height: 15em;
  transform: rotate(5deg);
}

.top::after {
  position: absolute;
  top: 26%;
  left: 0%;
  width: 90%;
  height: 88%;
  border: 0.3em solid black;
  background-color: var(--skin);
  content: "";
}

.forehead {
  position: absolute;
  top: 9.5em;
  left: 8.2em;
  overflow: hidden;
  width: 4em;
  height: 4em;
}

.forehead::after {
  position: absolute;
  top: -33em;
  left: -1em;
  width: 100em;
  height: 100em;
  border: 0.3em solid black;
  background-color: var(--skin);
  content: "";
}

.eye_brows {
  position: absolute;
  top: 11em;
  left: 8em;
  overflow: hidden;
  width: 1.9em;
  height: 1.9em;
}

.eye_brows::after {
  position: absolute;
  top: 0.2em;
  left: 0.6em;
  width: 2em;
  height: 2em;
  border: 0.3em solid black;
  background-color: var(--skin);
  content: "";
}

.eye_left {
  position: absolute;
  top: 12.8em;
  left: 4.9em;
  overflow: hidden;
  width: 10em;
  height: 10em;
}

.eye_left::before {
  position: absolute;
  top: -0.5em;
  left: 2.8em;
  width: 6em;
  height: 6em;
  border: 0.3em solid black;
  content: "";
}

.eye_left::after {
  position: absolute;
  top: 2.7em;
  left: 5.2em;
  width: 0.8em;
  height: 0.8em;
  background-color: black;
  content: "";
  transform: translate(-50%, -50%);
}

.eyelid_left {
  position: absolute;
  top: 11.3em;
  left: 7.9em;
  overflow: hidden;
  width: 6em;
  height: 6em;
  background: linear-gradient(300deg, var(--skin) 80%, transparent 80%);
}

.eyelid_left::after {
  position: absolute;
  top: 3em;
  left: -3.7em;
  width: 12em;
  height: 12em;
  border: 0.3em solid black;
  background-color: white;
  content: "";
}

.eye_right {
  position: absolute;
  top: 13.2em;
  left: 10.5em;
  overflow: hidden;
  width: 10em;
  height: 10em;
}

.eye_right::before {
  position: absolute;
  top: -0.5em;
  left: 2.4em;
  width: 6em;
  height: 6em;
  border: 0.3em solid black;
  background: linear-gradient(190deg, var(--skin) 35%, #fff 40%);
  content: "";
}

.eye_right::after {
  position: absolute;
  top: 2.8em;
  left: 5.5em;
  width: 0.8em;
  height: 0.8em;
  background-color: black;
  content: "";
  transform: translate(-50%, -50%);
}

.eyelid_right {
  position: absolute;
  top: 11.5em;
  left: 13.2em;
  overflow: hidden;
  width: 6em;
  height: 6em;
}

.eyelid_right::after {
  position: absolute;
  top: 3em;
  left: -4em;
  width: 12em;
  height: 12em;
  border: 0.3em solid black;
  content: "";
}

.nose_bridge_top {
  position: absolute;
  top: 15.9em;
  left: 10em;
  overflow: hidden;
  width: 3.7em;
  height: 3.7em;
  background-color: var(--skin);
}

.nose_bridge_top::after {
  position: absolute;
  bottom: 1.9em;
  left: -42.1em;
  width: 90em;
  height: 90em;
  border: 0.3em solid black;
  background: white;
  content: "";
}

.nose {
  position: absolute;
  top: 17.1em;
  left: 7.8em;
  overflow: hidden;
  width: 3em;
  height: 3em;
}

.nose::after {
  position: absolute;
  top: 0.2em;
  left: 0.8em;
  width: 2.8em;
  height: 2.8em;
  border: 0.3em solid black;
  background-color: var(--skin);
  content: "";
}

.nose_bridge_bottom {
  position: absolute;
  top: 16.9em;
  left: 9.7em;
  overflow: hidden;
  width: 5.5em;
  height: 5.5em;
}

.nose_bridge_bottom::after {
  position: absolute;
  bottom: 2.1em;
  left: -45em;
  width: 100em;
  height: 100em;
  border: 0.3em solid black;
  background-color: var(--skin);
  content: "";
}

.backneck {
  position: absolute;
  top: 14.8em;
  left: 13.6em;
  overflow: hidden;
  width: 17em;
  height: 17em;
  background-color: var(--skin);
}

.backneck::after {
  position: absolute;
  top: -16em;
  left: 7em;
  width: 50em;
  height: 50em;
  border: 0.3em solid black;
  background-color: white;
  content: "";
}

.ear {
  position: absolute;
  top: 18.5em;
  left: 20em;
  overflow: hidden;
  width: 4.8em;
  height: 4.8em;
}

.ear::before {
  position: absolute;
  top: 0.6em;
  left: -0.4em;
  width: 2.9em;
  height: 2.9em;
  border: 0.3em solid black;
  background-color: white;
  background-color: var(--skin);
  content: "";
}

.ear > .ear_in_1 {
  position: absolute;
  z-index: 2;
  top: 1em;
  left: 0.3em;
  overflow: hidden;
  width: 1.4em;
  height: 1.4em;
}

.ear > .ear_in_1::after {
  position: absolute;
  z-index: 2;
  top: 0.4em;
  left: -0.2em;
  width: 2em;
  height: 2em;
  border: 0.3em solid black;
  content: "";
}

.ear > .ear_in_2 {
  position: absolute;
  z-index: 2;
  top: 1.5em;
  left: 0.8em;
  overflow: hidden;
  width: 1.2em;
  height: 1.2em;
}

.ear > .ear_in_2::after {
  position: absolute;
  z-index: 2;
  top: 0;
  left: -0.7em;
  width: 1.2em;
  height: 1.2em;
  border: 0.3em solid black;
  content: "";
}

/* EAR End */

/* neck start */

.foreneck {
  position: absolute;
  top: 25em;
  left: 10em;
  overflow: hidden;
  width: 10em;
  height: 10em;
  background-color: var(--skin);
}

.foreneck::after {
  position: absolute;
  top: -30em;
  left: -47em;
  width: 50em;
  height: 50em;
  border: 0.3em solid black;
  background-color: white;
  content: "";
}

.stubble {
  position: absolute;
  top: 19.8em;
  left: 10.5em;
  overflow: hidden;
  width: 11em;
  height: 11em;
}

.stubble::after {
  position: absolute;
  top: 0.1em;
  left: -0.6em;
  width: 8.5em;
  height: 8.1em;
  border: 0.3em solid black;
  background-color: var(--stubble);
  content: "";
}

.above_lip {
  position: absolute;
  top: 19.5em;
  left: 6.5em;
  overflow: hidden;
  width: 4em;
  height: 4em;
}

.above_lip::after {
  position: absolute;
  top: 0;
  left: 1.5em;
  width: 6.5em;
  height: 6.5em;
  border: 0.3em solid black;
  background: #d1b271;
  content: "";
}

.top_lip {
  position: absolute;
  top: 22.8em;
  left: 6.7em;
  overflow: hidden;
  width: 2em;
  height: 2em;
}

.top_lip::after {
  position: absolute;
  top: 0;
  left: 0.8em;
  width: 1.9em;
  height: 1.9em;
  border: 0.3em solid black;
  background: #d1b271;
  content: "";
}

.bottom_lip {
  position: absolute;
  top: 24.6em;
  left: 9em;
  overflow: hidden;
  width: 2em;
  height: 2em;
}

.bottom_lip::after {
  position: absolute;
  top: -0.1em;
  left: 0.8em;
  width: 1.9em;
  height: 1.9em;
  border: 0.3em solid black;
  background: #d1b271;
  content: "";
}

.mouth {
  position: absolute;
  top: 19.3em;
  left: 8.1em;
  overflow: hidden;
  width: 8.5em;
  height: 8.5em;
}

.mouth::after {
  position: absolute;
  bottom: 2.8em;
  left: -14em;
  width: 35em;
  height: 35em;
  border: 0.3em solid black;
  background: #d1b271;
  content: "";
}

.mouth_edge {
  position: absolute;
  top: 23.2em;
  left: 15.8em;
  overflow: hidden;
  width: 1.6em;
  height: 1.6em;
}

.mouth_edge::after {
  position: absolute;
  top: 0.4em;
  left: -0.8em;
  width: 2em;
  height: 2em;
  border: 0.3em solid black;
  content: "";
}

.hair_top_1 {
  position: absolute;
  top: 1.2em;
  left: 14em;
  overflow: hidden;
  width: 7em;
  height: 7em;
}

.hair_top_1::after {
  position: absolute;
  top: 3em;
  left: 0;
  width: 5.6em;
  height: 5.6em;
  border: 0.3em solid black;
  content: "";
}

.hair_top_2 {
  position: absolute;
  top: 1.5em;
  left: 16em;
  overflow: hidden;
  width: 7em;
  height: 7em;
}

.hair_top_2::after {
  position: absolute;
  top: 3em;
  left: -0.5em;
  width: 5.6em;
  height: 5.6em;
  border: 0.3em solid black;
  content: "";
}

.hair_nape_1,
.hair_nape_2,
.hair_nape_3,
.hair_nape_4 {
  position: absolute;
  overflow: hidden;
  width: 3em;
  height: 3em;
}

.hair_nape_1 {
  top: 15.6em;
  left: 18.7em;
}

.hair_nape_2 {
  top: 15.9em;
  left: 19.8em;
}

.hair_nape_3 {
  top: 15.9em;
  left: 20em;
}

.hair_nape_4 {
  top: 16em;
  left: 21.2em;
}

.hair_nape_1::after,
.hair_nape_3::after {
  position: absolute;
  top: -76em;
  right: -7em;
  width: 100em;
  height: 100em;
  border: 0.3em solid black;
  content: "";
}

.hair_nape_2::after,
.hair_nape_4::after {
  position: absolute;
  top: -60em;
  left: 0;
  width: 100em;
  height: 100em;
  border: 0.3em solid black;
  content: "";
}

